# trace-pilot-chrome

./: .gitignore  CHANGELOG.md  LICENSE  README.md
.github/workflows/: protocol-ci.yml  publish-schema.yml  publish-shema.yml
extension/: background.js  build_mock.sh  build_release.sh  content.js  manifest.json  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
extension/release/my-extension/: manifest.json
extension/src/: background.ts  build.sh  content.ts  type.ts
extension/src/background/: background.ts  generic-listener.ts  handler.ts  menu-manager.ts  other-handler.ts  pdf-handler.ts
extension/src/background/clipboard/: offscreen-clipboard.ts
extension/src/background/google-sheets-module/: google-sheets-handler.ts
extension/src/background/gpt-module/: gpt-handler.ts
extension/src/background/pdf-module/: pdf-handler.ts
extension/src/background/static-module/: static-handler.ts
extension/src/content/: content.ts
extension/src/content/google-sheets/: google-sheets-listener.ts  google-sheets-thread.ts
extension/src/offscreen/: offscreen.ts
extension/src/protocol/: schema.ts
extension/tools/: gen_fixtures.ts  zod_mock.ts
fixtures/chrome_to_native/: msg_pdf.json
fixtures/native_to_vscode/: schema.json
native-host/: Cargo.toml  build_release.sh
native-host/release/trace-pilot-host-linux-x86_64/: README.md  install.sh
native-host/schema-gen/: Cargo.toml
native-host/schema-gen/src/: main.rs
native-host/src/: get_bytes_from_url.rs  hash_and_store.rs  main.rs  types.rs
native-host/tests/: contract_from_ts.rs
(+2 files in other folders)
