[package]
name = "native-host"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars="0.8"
anyhow="1"
regex="1"
chrono="0.4"
reqwest = { version = "0.12", features = ["rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
url = "2"

[workspace]
members =[
    ".",
    "schema-gen"
]